# ConDict

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/Console/: Console_interface.cpp  Console_interface.h
src/Console/Windows/: Helper.cpp  Helper.h
src/Dictionary/: Dictionary.cpp  Dictionary.h
src/Windows/: Helper.cpp  Helper.h
